* Fixed two more memory leaks. (val->section and cfg->filename)
* Added project files for MS Visual C++ 6.0
* Includes io.h on windows
* Fixed initialization of default values for lists, when given a NULL
  string. Now initialized to the empty list. Noted by Juraj Variny.
* Setting a list to the empty list in the config file now possible.
* Appending to default values in a list is now ok.



New in 2.0
----------

 NOTE! Compatibility with earlier versions is broken.

* Changed cfg_flag_t from enum to int (should now compile with c++)
* Variable number of arguments to functions: function types should no
  longer specify number of expected arguments in the initializer, the
  callback should instead check the argc variable.
* Fixed the cfg_tilde_expand function
* Added documentation for the value parsing callback
* Changed the definitions of cfg_func_t and cfg_callback_t, the cfg
  and option context are now both passed as parameters
* Fixed and extended the example programs
* Added a bunch of cfg_setXXX functions to set option values after parsing
* Some types renamed for consistency (cfgopt_t to cfg_opt_t, cfgval_t
  to cfg_value_t, cfgbool_t to cfg_bool_t)
* cfg_free_val() renamed to cfg_free_value()
* Lexer symbols now uses prefix cfg_ to ease linking with other lexers
* Forgot to close the file in cfg_parse()
* Memory leaks fixed (checked with valgrind)
* Sections with same title are always overwritten
* Lists can now have (complete) default values in the form of a string
  that is parsed in the same way as the config file (see doc + examples)
* Added support for building as a DLL on Windows
* Included project files for Borland C++ Builder 6.0
* Included project files for Dev-Cpp 5.0
* Included project files for MS Visual Studio
* Pre-built documentation now included in the source tarball


New in 1.2.3
------------

* fixed segfault due to uninitialized user-defined error function
* added callback support


New in 1.2.2
------------
