@@ -15,7 +15,9 @@ New in 2.1
   string. Now initialized to the empty list. Noted by Juraj Variny.
 * Setting a list to the empty list in the config file now possible.
 * Appending to default values in a list is now ok.
-
+* Hexadecimal escape sequences allowed in double-quoted strings
+* Corrected line number with multi-line quoted strings
+* Fixed undetected /*comment*/ (ie, without space between /* and the text)
 
 
 New in 2.0
